--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
 PORT = 3000
-MONGO_URI = mongodb://localhost:27017/vanmam 
+MONGO_URI = mongodb+srv://joefromfeather:RubyMol@cluster0.npsn6.mongodb.net/vanmam?retryWrites=true&w=majority&appName=Cluster0
