--- a/billing/package.json
+++ b/billing/package.json
@@ -27,6 +27,7 @@
     "electron-updater": "^6.1.7",
     "moment": "^2.30.1",
     "react-redux": "^9.1.2",
+    "react-router-dom": "^6.27.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "short-unique-id": "^5.2.0"
