--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@react-pdf/renderer": "^4.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
@@ -20,6 +21,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
+    "react-pdf-html": "^2.1.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
