--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.3",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
